# paco

./: INSTALL  LICENSE  README
Pacu/: .gitignore  CMakeLists.txt  CxxSyntax.js  CxxTranslationUnit.cpp  CxxTranslationUnit.hpp  EscapeSequenceSyntax.cpp  EscapeSequenceSyntax.hpp  Info.plist  InterpositionProxy.cpp  InterpositionProxy.hpp  LogDisplay.cpp  LogDisplay.hpp  MessageSyntax.cpp  MessageSyntax.hpp  QxAboutDialog.cpp  QxAboutDialog.hpp  QxActivation.cpp  QxActivation.hpp  QxActivationDialog.cpp  QxActivationDialog.hpp  QxApplication.cpp  QxApplication.hpp  QxCodeBrowser.cpp  QxCodeBrowser.hpp  QxCodetipsPreferences.cpp  QxCodetipsPreferences.hpp  QxComboBox.cpp  QxComboBox.hpp  QxCommand.cpp  QxCommand.hpp  QxCommandEditor.cpp  QxCommandEditor.hpp  QxCommandEditor.ui  QxCommandsModel.cpp  QxCommandsModel.hpp  QxCommandsPreferences.cpp  QxCommandsPreferences.hpp  QxCurrentDirDialog.cpp  QxCurrentDirDialog.hpp  QxCustomStyle.cpp  (+99 more)
Pacu/Resources/: .fonts.conf  Buy Now.webloc  License.txt  as.icns  c_progamming.conf  cmake.icns  cucumber.icns  cxx.icns  gem.icns  haxe.icns  hxx.icns  pacu.icns  python.icns  rake.icns  rdoc.icns  ruby.icns  sh.icns  web_programming.conf
Pacu/Resources/manual/: manual.css  manual.html  manual.sh  manual.txt
Pacu/homepage/: pacu_shot0.tiff  pacu_shot1.tiff  pacu_shot2.tiff  pacu_shot3.tiff  pacu_shot4.tiff  pacu_shot5.tiff  tile_applications.xcf  to_haml.rb  top.rb
Pacu/homepage/pixmaps/: pacu_screenshot_full_resolution.tiff  pacu_shot0.tiff  pacu_shot1.tiff  pacu_shot2.tiff  pacu_shot3.tiff  pacu_shot4.tiff  pacu_shot5.tiff
Pacu/logo/: Makefile  pacu128.c  pacu16.c  pacu32.c  pacu512.c  pacu64.c
Pacu/logo/128x128/: pacu.c
Pacu/logo/16x16/: pacu.c
Pacu/logo/24x24/: Makefile  tlight.c  tlight2.c
Pacu/logo/256x256/: Makefile  pacu.c
Pacu/logo/32x32/: Makefile  pacu.c  tlight.c
Pacu/logo/512x512/: pacu.c
Pacu/logo/64x64/: pacu.c
Pacu/m0n0/: Makefile  bookmark.c  bookmarkNegativ.c  cdup.c  cdupNegativ.c  close.c  closeNegativ.c  gotoLine.c  gotoLineNegativ.c  history.c  historyNegativ.c  magnifier.c  magnifierPopup.c  more.c  moreNegativ.c  plus.c  plusNegativ.c  popup.c  popupNegativ.c  reload.c  reloadNegativ.c  scrollLeft.c  scrollLeftNegativ.c  scrollRight.c  scrollRightNegativ.c  toolClosed.c  toolClosedNegativ.c  toolOpen.c  toolOpenNegativ.c  wheel.c  wheelNegativ.c
Pacu/qt-patches/: disable_toolbutton.patch  reopen.patch  setwindowicon.patch  toolbar_button.diff  unifiedmove.patch  wheel_mice_scroll_support.diff
Pacu/sky/: embed.c
Pacu/sky/16x16/: Makefile  package.c
Pacu/sky/24x24/: Makefile  barchart.c  book.c  chat.c  codebrowser.c  filebrowser.c  filenew.c  fileverify.c  idea.c  pencil.c  piechart.c  preferences.c  print.c  protect.c  question.c  reload.c  script.c  scriptadd.c  scripthalt.c  scriptreset.c  scriptstart.c  scriptstop.c  wwwbook.c  wwwbrowser.c  wwwlookup.c
Pacu/sky/32x32/: Makefile  barchart.c  book.c  chat.c  codebrowser.c  critical.c  edit.c  filebrowser.c  filedown.c  filenew.c  fileup.c  fileverify.c  folderdown.c  folderup.c  idea.c  information.c  pencil.c  piechart.c  preferences.c  print.c  protect.c  question.c  reload.c  script.c  scripthalt.c  scriptreset.c  scriptstart.c  scriptstop.c  search.c  terminal.c  wwwbook.c  wwwbrowser.c  wwwlookup.c
Pacu/sky/48x48/: Makefile  critical.c  information.c  question.c
charcoal/stacks/: python.js  xml.js
charcoal/syntax/: bash.js
libPTE/: CMakeLists.txt
libPTE/cmake/: FindPTE.cmake  UsePTE.cmake
libPTE/pte/: Atoms.hpp  CMakeLists.txt  CharcoalDirectory.cpp  CharcoalDirectory.hpp  CharcoalException.hpp  Context.cpp  Context.hpp  CustomList.hpp  CustomListObserver.hpp  Document.cpp  Document.hpp  DocumentColorizer.cpp  DocumentColorizer.hpp  Edit.cpp  Edit.hpp  EditWidget.cpp  EditWidget.hpp  Exception.hpp  GrowingArray.hpp  Highlighter.cpp  Highlighter.hpp  HighlightingTheme.cpp  HighlightingTheme.hpp  InsightModel.cpp  InsightModel.hpp  InsightParser.cpp  InsightParser.hpp  InsightTree.cpp  InsightTree.hpp  LanguageLayer.cpp  LanguageLayer.hpp  LanguageManager.cpp  LanguageManager.hpp  LanguageStack.cpp  LanguageStack.hpp  MembersTipModel.cpp  MembersTipModel.hpp  Palette.cpp  Palette.hpp  PaletteManager.cpp  (+28 more)
libPTE/tests/: CMakeLists.txt  testDocumentSyntax.cpp  testDocumentSyntax.js  testSequenceAdapter.cpp
libSEAL/: CMakeLists.txt  build_curl_leopard.sh  build_curl_leopard64.sh  build_curl_linux.sh  build_curl_tiger.sh
libSEAL/cmake/: FindSEAL.cmake  UseSEAL.cmake
libSEAL/seal/: Activation.cpp  Activation.hpp  CMakeLists.txt  Envelope.cpp  Envelope.hpp  endian.hpp  private.hpp  seal.cpp  seal.h
libSEAL/tools/: CMakeLists.txt  embed.cpp
libVIDE/: CMakeLists.txt
libVIDE/cmake/: FindVIDE.cmake  UseVIDE.cmake
libVIDE/test/: CMakeLists.txt  testEditMode.cpp
libVIDE/vide/: CMakeLists.txt  Core.hpp  QxControl.cpp  QxControl.hpp  QxPainter.hpp  QxStyle.cpp  QxStyle.hpp  QxStyleManager.cpp  QxStyleManager.hpp  QxTexture.cpp  QxTexture.hpp  QxVisual.cpp  QxVisual.hpp  UseFtl.hpp
libcodetips/: CMakeLists.txt  COPYING  INSTALL  README
libcodetips/cmake/: FindCodetips.cmake  UseCodetips.cmake
libcodetips/codetips/: Assistant.cpp  Assistant.hpp  AssistantManager.cpp  AssistantManager.hpp  CMakeLists.txt  CxxAutotext.cpp  CxxAutotext.hpp  HaxeCodetips.cpp  HaxeCodetips.hpp  HaxeMessageSyntax.cpp  HaxeMessageSyntax.hpp  HelloWorld.cpp  HelloWorld.hpp  InterpositionClient.cpp  InterpositionClient.hpp  InterpositionServer.cpp  InterpositionServer.hpp  PythonAutotext.cpp  PythonAutotext.hpp  RubyAutotext.cpp  RubyAutotext.hpp  WordPredictor.cpp  WordPredictor.hpp  XmlAutotext.cpp  XmlAutotext.hpp  XmlOpenTagSyntax.cpp  XmlOpenTagSyntax.hpp  codetips  codetips.hpp
