CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libPTE)

SET(BUILD_SHARED_LIBS ON CACHE BOOL "Build dynamic or static library.")

FIND_PACKAGE(Codetips REQUIRED)
INCLUDE(UseCodetips)

FIND_PACKAGE(FTL REQUIRED)
INCLUDE(UseFTL)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

INCLUDE(cmake/UsePTE.cmake)

INSTALL(FILES cmake/FindPTE.cmake cmake/UsePTE.cmake DESTINATION ${CMAKE_ROOT}/Modules)
INSTALL(DIRECTORY pte DESTINATION include FILES_MATCHING PATTERN *.hpp)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib CACHE PATH "")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "")

SUBDIRS(pte) # tests
