CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libSEAL)

SET(BUILD_SHARED_LIBS ON CACHE BOOL "Build dynamic or static library.")

FIND_PACKAGE(FTL REQUIRED)
INCLUDE(UseFTL)

FIND_PACKAGE(CURL REQUIRED)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})

INSTALL(
	FILES cmake/FindSEAL.cmake cmake/UseSEAL.cmake
	DESTINATION ${CMAKE_ROOT}/Modules
)

INSTALL(
	DIRECTORY seal
	DESTINATION include
	PATTERN *.cpp EXCLUDE
	PATTERN *.sh EXCLUDE
	PATTERN *.txt EXCLUDE
	PATTERN private* EXCLUDE
)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib CACHE PATH "")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "")

SUBDIRS(seal tools) # tools test
