CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(codetips)

FIND_PACKAGE(FTL REQUIRED)
INCLUDE(UseFTL)

INSTALL(
	FILES cmake/FindCodetips.cmake cmake/UseCodetips.cmake
	DESTINATION ${CMAKE_ROOT}/Modules
)

INSTALL(
	DIRECTORY ftl
	DESTINATION include
	PATTERN *.cpp EXCLUDE
	PATTERN *.sh EXCLUDE
	PATTERN *.txt EXCLUDE
)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib CACHE PATH "")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "")

SUBDIRS(codetips)
